--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
@@ -25,6 +26,8 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "prisma": "^4.14.1"
+    "@types/jest": "^29.5.1",
+    "prisma": "^4.14.1",
+    "ts-jest": "^29.1.0"
   }
 }
