--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -14,6 +14,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.head_ref }}
 
       - name: Use NodeJS
         uses: actions/setup-node@v3
