--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
-    "next": "15.1.2",
+    "next": "15.3.2",
+    "pnpm": "^10.11.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,5 +28,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "prisma": "^5.22.0"
-  }
+  },"engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=10.11.0"
+  },
+  "packageManager": "pnpm@10.11.0"
 }
