--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@codingame/monaco-vscode-api": "^17.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^5.22.0",
     "@types/node": "20.2.3",
@@ -18,17 +19,26 @@
     "autoprefixer": "10.4.14",
     "eslint-config-next": "15.3.2",
     "monaco-editor": "^0.52.2",
+    "monaco-languageclient": "^9.6.0",
     "next": "15.3.2",
     "pnpm": "^10.11.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "vscode-jsonrpc": "^8.2.1",
+    "vscode-languageclient": "9.0.1",
+    "vscode-languageserver": "^9.0.1",
+    "vscode-languageserver-textdocument": "^1.0.12",
+    "vscode-ws-jsonrpc": "^3.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
+    "@typescript-eslint/parser": "8.32.1",
     "eslint": "8.57.0",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "worker-loader": "^3.0.8"
   },
   "engines": {
     "node": ">=18.0.0",
