--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@codingame/monaco-vscode-api": "^17.0.0",
+    "@codingame/monaco-vscode-keybindings-service-override": "^17.0.0",
+    "@codingame/monaco-vscode-lifecycle-service-override": "^17.0.0",
+    "@codingame/monaco-vscode-localization-service-override": "^17.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^5.22.0",
     "@types/node": "20.2.3",
@@ -19,6 +22,7 @@
     "autoprefixer": "10.4.14",
     "eslint-config-next": "15.3.2",
     "monaco-editor": "^0.52.2",
+    "monaco-editor-wrapper": "^6.7.0",
     "monaco-languageclient": "^9.6.0",
     "next": "15.3.2",
     "pnpm": "^10.11.0",
