we are using vite+tanstack now

--- a/package.json
+++ b/package.json
@@ -1,52 +1,41 @@
 {
-  "name": "wynntils-info-site",
-  "version": "0.1.1",
+  "name": "wynntils-functions",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "dev": "vite --port 3000",
+    "start": "vite --port 3000",
+    "build": "vite build && tsc",
+    "serve": "vite preview",
+    "test": "vitest run",
+    "lint": "eslint",
+    "format": "prettier",
+    "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
-    "@codingame/monaco-vscode-api": "^17.0.0",
-    "@codingame/monaco-vscode-keybindings-service-override": "^17.0.0",
-    "@codingame/monaco-vscode-lifecycle-service-override": "^17.0.0",
-    "@codingame/monaco-vscode-localization-service-override": "^17.0.0",
-    "@monaco-editor/react": "^4.7.0",
-    "@prisma/client": "^5.22.0",
-    "@types/node": "20.2.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "eslint-config-next": "15.3.2",
-    "monaco-editor": "^0.52.2",
-    "monaco-editor-wrapper": "^6.7.0",
-    "monaco-languageclient": "^9.6.0",
-    "next": "15.3.2",
-    "pnpm": "^10.11.0",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "vscode-jsonrpc": "^8.2.1",
-    "vscode-languageclient": "9.0.1",
-    "vscode-languageserver": "^9.0.1",
-    "vscode-languageserver-textdocument": "^1.0.12",
-    "vscode-ws-jsonrpc": "^3.4.0"
+    "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-query": "^5.66.5",
+    "@tanstack/react-query-devtools": "^5.66.5",
+    "@tanstack/react-router": "^1.114.3",
+    "@tanstack/react-router-devtools": "^1.114.3",
+    "@tanstack/router-plugin": "^1.114.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
-    "@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
-    "@typescript-eslint/parser": "8.32.1",
-    "eslint": "8.57.0",
-    "prisma": "^5.22.0",
-    "worker-loader": "^3.0.8"
+    "@tanstack/eslint-config": "^0.1.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "jsdom": "^26.0.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.7.2",
+    "vite": "^6.1.0",
+    "vitest": "^3.0.5",
+    "web-vitals": "^4.2.4"
   },
-  "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=10.11.0"
-  },
-  "packageManager": "pnpm@10.11.0"
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
