new prettier config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "allowImportingTsExtensions": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./app/*"],
+      "@/*": [
+        "./app/*"
+      ]
     }
   }
 }
