--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
+    "@codingame/monaco-vscode-api": "^17.1.0",
     "@prisma/client": "^6.8.1",
     "@prisma/extension-accelerate": "^1.3.0",
     "@tailwindcss/postcss": "^4.1.7",
     "@tanstack/react-router": "^1.120.3",
     "@tanstack/react-start": "^1.120.3",
     "monaco-editor": "^0.52.2",
+    "monaco-editor-wrapper": "^6.7.0",
+    "monaco-languageclient": "^9.6.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "vinxi": "^0.5.6"
+    "vinxi": "^0.5.6",
+    "vscode-languageserver": "^9.0.1"
   },
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
