--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
     "@codingame/monaco-vscode-api": "^17.1.0",
+    "@codingame/monaco-vscode-editor-api": "^17.1.0",
     "@prisma/client": "^6.8.1",
     "@prisma/extension-accelerate": "^1.3.0",
     "@tailwindcss/postcss": "^4.1.7",
@@ -27,7 +28,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vinxi": "^0.5.6",
-    "vscode-languageserver": "^9.0.1"
+    "vscode-languageserver": "^9.0.1",
+    "vscode-languageserver-textdocument": "^1.0.12"
   },
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
