--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@codingame/monaco-vscode-api": "^17.1.0",
     "@codingame/monaco-vscode-editor-api": "^17.1.0",
+    "@monaco-editor/loader": "^1.5.0",
     "@prisma/client": "^6.8.1",
     "@prisma/extension-accelerate": "^1.3.0",
     "@tailwindcss/postcss": "^4.1.7",
