--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "vite --port 3000",
     "build": "vite build && tsc",
     "serve": "vite preview",
+    "prod": "vite build && vite preview",
     "test": "vitest run",
     "lint": "eslint",
     "format": "prettier",
@@ -20,9 +21,14 @@
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "monaco-editor": "^0.52.2",
+    "monaco-editor-wrapper": "^6.7.0",
+    "monaco-languageclient": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "vscode-languageserver": "^9.0.1",
+    "vscode-languageserver-textdocument": "^1.0.12"
   },
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
