--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "eslint-config-next": "15.3.2",
     "monaco-editor": "^0.52.2",
+    "monaco-editor-wrapper": "^6.7.0",
     "monaco-languageclient": "^9.6.0",
     "next": "15.3.2",
     "pnpm": "^10.11.0",
@@ -37,6 +38,7 @@
     "@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
     "@typescript-eslint/parser": "8.32.1",
     "eslint": "8.57.0",
+    "prettier": "^3.5.3",
     "prisma": "^5.22.0",
     "worker-loader": "^3.0.8"
   },
