--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "wynntils-info-site",
-  "version": "0.1.1",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "@types/node": "20.2.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "next": "15.1.2",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "prisma": "^5.22.0"
-  }
+    "name": "wynntils-info-site",
+    "version": "0.1.1",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "postinstall": "prisma generate"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.22.0",
+        "@types/node": "20.2.3",
+        "@types/react": "18.2.6",
+        "@types/react-dom": "18.2.4",
+        "@vercel/analytics": "^1.5.0",
+        "autoprefixer": "10.4.21",
+        "eslint": "8.57.0",
+        "eslint-config-next": "13.4.3",
+        "next": "15.3.5",
+        "postcss": "8.5.6",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "tailwindcss": "3.3.2",
+        "typescript": "5.8.3"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.14",
+        "prettier": "3.6.2",
+        "prisma": "^5.22.0"
+    },
+    "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
