--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
         "@types/node": "20.2.3",
         "@types/react": "18.2.6",
         "@types/react-dom": "18.2.4",
-        "@vercel/analytics": "^1.5.0",
+        "@vercel/analytics": "^1.6.1",
         "autoprefixer": "10.4.21",
         "eslint": "8.57.0",
         "eslint-config-next": "13.4.3",
-        "next": "15.3.5",
+        "next": "15.5.12",
         "postcss": "8.5.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "tailwindcss": "3.3.2",
-        "typescript": "5.8.3"
+        "typescript": "^5.9.3"
     },
     "devDependencies": {
-        "prettier": "3.6.2",
+        "prettier": "^3.8.1",
         "prisma": "^5.22.0"
     },
-    "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
+    "packageManager": "pnpm@10.30.1+sha512.3590e550d5384caa39bd5c7c739f72270234b2f6059e13018f975c313b1eb9fefcc09714048765d4d9efe961382c312e624572c0420762bdc5d5940cdf9be73a"
 }
