--- a/package.json
+++ b/package.json
@@ -6,28 +6,39 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
+        "lint": "eslint .",
         "postinstall": "prisma generate"
     },
     "dependencies": {
-        "@prisma/client": "^5.22.0",
-        "@types/node": "20.2.3",
-        "@types/react": "18.2.6",
-        "@types/react-dom": "18.2.4",
+        "@prisma/adapter-pg": "^7.4.1",
+        "@prisma/client": "^7.4.1",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-label": "^2.1.8",
+        "@radix-ui/react-separator": "^1.1.8",
+        "@radix-ui/react-slot": "^1.2.4",
+        "@tailwindcss/postcss": "^4.2.0",
         "@vercel/analytics": "^1.6.1",
-        "autoprefixer": "10.4.21",
-        "eslint": "8.57.0",
-        "eslint-config-next": "13.4.3",
-        "next": "15.5.12",
-        "postcss": "8.5.6",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "tailwindcss": "3.3.2",
-        "typescript": "^5.9.3"
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "eslint-config-next": "16.1.6",
+        "lucide-react": "^0.575.0",
+        "next": "16.1.6",
+        "pg": "^8.18.0",
+        "react": "19.2.4",
+        "react-dom": "19.2.4",
+        "tailwind-merge": "^3.5.0",
+        "tw-animate-css": "^1.4.0"
     },
     "devDependencies": {
+        "@types/node": "25.3.0",
+        "@types/react": "19.2.14",
+        "@types/react-dom": "19.2.3",
+        "eslint": "9.39.1",
+        "postcss": "8.5.6",
         "prettier": "^3.8.1",
-        "prisma": "^5.22.0"
+        "prisma": "^7.4.1",
+        "tailwindcss": "4.2.0",
+        "typescript": "5.9.3"
     },
     "packageManager": "pnpm@10.30.1+sha512.3590e550d5384caa39bd5c7c739f72270234b2f6059e13018f975c313b1eb9fefcc09714048765d4d9efe961382c312e624572c0420762bdc5d5940cdf9be73a"
 }
