--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "postinstall": "prisma generate"
     },
     "dependencies": {
+        "@monaco-editor/react": "^4.7.0",
         "@prisma/adapter-pg": "^7.4.1",
         "@prisma/client": "^7.4.1",
         "@radix-ui/react-checkbox": "^1.3.3",
@@ -23,6 +24,7 @@
         "clsx": "^2.1.1",
         "eslint-config-next": "16.1.6",
         "lucide-react": "^0.575.0",
+        "monaco-editor": "^0.55.1",
         "next": "16.1.6",
         "pg": "^8.18.0",
         "react": "19.2.4",
